--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = {py27,py33,py34}-{oldest,pinned,latest,mastereventlet}-lib, py34-branchcoverage-lib, {py27,py34}-examples, docs
+envlist = {py27,py33,py34,py35,py36}-{oldest,pinned,latest,mastereventlet}-lib, py34-branchcoverage-lib, {py27,py34}-examples, docs
 skipsdist = True
 
 [travis]
 python =
-  2.7: py27
-  3.4: py34, branchcoverage, docs
+  2.7: py27, examples
+  3.4: py34, branchcoverage, examples, docs
   3.5: py35
   3.6: py36
 
