try just using matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ python:
   - "3.5"
   - "3.6"
 
-install:
-  - pip install tox-travis
-
 cache:
   directories:
     - $HOME/.cache/pip
@@ -19,10 +16,19 @@ env:
   - TOX_ENV=pinned-lib
   - TOX_ENV=latest-lib
   - TOX_ENV=mastereventlet-lib
-  - TOX_ENV=branchcoverage-lib
 
 matrix:
   fast_finish: true
+  include:
+    - python: 2.7
+      env: TOX_ENV=examples
+    - python: 3.4
+      env: TOX_ENV=examples
+    - python: 3.4
+      env: TOX_ENV=branchcoverage-lib
+    - python: 3.4
+      env: TOX_ENV=docs
+
   allow_failures:
     - env: TOX_ENV=mastereventlet-lib
     - env: TOX_ENV=branchcoverage-lib
