--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,14 @@
 envlist = {py27,py33,py34,py35,py36}-{oldest,pinned,latest,mastereventlet}-lib, py34-branchcoverage-lib, {py27,py34}-examples, docs
 skipsdist = True
 
+[travis]
+python =
+  2.7: py27
+  3.3: py33
+  3.4: py34
+  3.5: py35
+  3.6: py36
+
 [testenv]
 deps =
     # oldest supported libraries for each python
