--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,17 @@ python =
   3.5: py35
   3.6: py36
 
+DEPS =
+  oldest: oldest
+  pinned: pinned
+  latest: latest
+  mastereventlet: mastereventlet
+
+TASK =
+  lib: lib
+  examples: examples
+  docs: docs
+
 [testenv]
 deps =
     # oldest supported libraries for each python
