specify travis:env

--- a/tox.ini
+++ b/tox.ini
@@ -10,16 +10,12 @@ python =
   3.5: py35
   3.6: py36
 
+[travis:env]
 DEPS =
   oldest: oldest
   pinned: pinned
   latest: latest
   mastereventlet: mastereventlet
-
-TASK =
-  lib: lib
-  examples: examples
-  docs: docs
 
 [testenv]
 deps =
