--- a/.travis.yml
+++ b/.travis.yml
@@ -19,23 +19,22 @@ env:
   - DEPS=pinned
   - DEPS=latest
   - DEPS=mastereventlet
-  - TASK=lib
 
 matrix:
   fast_finish: true
   include:
     - python: 2.7
-      env: TASK=examples
+      env: TOX_ENV=py27-examples
     - python: 3.4
-      env: TASK=examples
+      env: TOX_ENV=py34-examples
     - python: 3.4
-      env: TASK=branchcoverage
+      env: TOX_ENV=py34-branchcoverage-lib
     - python: 3.4
-      env: TASK=docs
+      env: TOX_ENV=docs
 
   allow_failures:
     - env: DEPS=mastereventlet
-    - env: TASK=branchcoverage
+    - env: TOX_ENV=py34-branchcoverage-lib
 
 script:
   - tox
