--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,11 @@ DEPS =
   latest: latest
   mastereventlet: mastereventlet
 
+TASK =
+  examples: examples
+  docs: docs
+  branchcoverage: branchcoverage
+
 [testenv]
 deps =
     # oldest supported libraries for each python
