does this work?

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = {py27,py33,py34,py35,py36}-{oldest,pinned,latest,mastereventlet}-lib, py34-branchcoverage-lib, {py27,py34}-examples, py34-docs
+envlist = {py27,py33,py34,py35,py36}-{oldest,pinned,latest,mastereventlet}-lib, py34-branchcoverage-lib, {py27,py34}-examples, docs
 skipsdist = True
 
 [travis]
 python =
   2.7: py27
   3.3: py33
-  3.4: py34
+  3.4: py34, docs
   3.5: py35
   3.6: py36
 
@@ -18,9 +18,9 @@ DEPS =
   mastereventlet: mastereventlet
 
 TASK =
+  branchcoverage: branchcoverage
   examples: examples
   docs: docs
-  branchcoverage: branchcoverage
 
 [testenv]
 deps =
