--- a/tox.ini
+++ b/tox.ini
@@ -11,13 +11,11 @@ python =
   3.6: py36
 
 [travis:env]
-DEPS =
+FACTOR =
   oldest: oldest
   pinned: pinned
   latest: latest
   mastereventlet: mastereventlet
-
-TASK =
   branchcoverage: branchcoverage
   examples: examples
   docs: docs
