experiment: also run branchcoverge on 2.7 but don't allow it to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ matrix:
       env: FACTOR=examples
     - python: 3.4
       env: FACTOR=examples
+    - python: 2.7
+      env: FACTOR=branchcoverage
     - python: 3.4
       env: FACTOR=branchcoverage
     - python: 3.4
@@ -34,7 +36,8 @@ matrix:
 
   allow_failures:
     - env: FACTOR=mastereventlet
-    - env: FACTOR=branchcoverage
+    - python: 3.4
+      env: FACTOR=branchcoverage
 
 script:
   - tox
