--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py33,py34,py35,py36}-{oldest,pinned,latest,mastereventlet}-lib, py34-branchcoverage-lib, {py27,py34}-examples, docs
+envlist = {py27,py33,py34,py35,py36}-{oldest,pinned,latest,mastereventlet}-lib, {py27,py34}-branchcoverage-lib, {py27,py34}-examples, docs
 skipsdist = True
 
 [travis]
